新增计划和重构